[tool.poetry]
name = "poetry for jerry-s-game"
version = "0.1.0"
description = ""
authors = ["Solveyga <azbite@mail.ru>"]
readme = "README.md"
packages = [{include = "poetry for jerry_s_game"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
